Make sure the main drop-down menus have a sufficiently high z-index to always be visible.

--- a/src/scss/application/_foundation-overrides.scss
+++ b/src/scss/application/_foundation-overrides.scss
@@ -30,6 +30,7 @@
         .is-dropdown-submenu, .divider {
             border-color: $black;
             background-color: $topbar-background;
+            z-index: 11;
         }
     }
 }
